@@ -2,6 +2,7 @@ TBC - 0.41.0
 - [NEW] - Logbook - Added a new context menu item - Update QSO from Callbook (issue #450 @aa5sh)
 - [NEW] - DIGI mode is used in case of DXC Digi Spots (issue #480)
 - [NEW] - DXC - Retrieve information about SOTA, POTA, IOTA and WWFF from comment (issue #482)
+- [NEW] - Alert - Added SOTA, POTA, IOTA and WWFF filter
 - [NEW] - Added the COM Port Completer for Windows platform (issue #490)
 - [NEW] - Settings - Added DXCC Confirmed By options (issue #508)
 - [NEW] - Added POTA Export Formatter (activator/hunter) (PR #514 @kyleboyle)
